# sendmail-cli

./: .gitignore  README.md  pyproject.toml
sendmail/: cli.py
