[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sendmail-cli"
version = "0.1.0"
description = "Send emails from CLI using n8n"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "rich"
]

[project.scripts]
sendmail = "sendmail.cli:main"
